# predictive

./: CHANGELOG.md  NOTICE  README.md  default.nix  predictive.cabal
Data/: Predictive.hs
