-- Copyright 2016 Ertugrul Söylemez
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

name:     predictive
version:  0.1.0
category: Data
synopsis: Predict the future, backtrack on failure

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2016 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/predictive
bug-reports:  https://github.com/esoeylemez/predictive/issues
license:      Apache
license-file: LICENSE

description:  This is a library for predictive scans.  Its aim is to
    improve user experience in cases when user interactions have to be
    acknowledged by a remote host.  It closes the gap between requesting
    the interaction and the remote end acknowledging it by predicting
    what the remote end will decide based on local information.  If the
    prediction is wrong, it automatically backtracks to the last state
    known to be consistent.
    .
    Simple example:  Your application displays a client-side text box,
    but each edit made to it has to be acknowledged by a server.
    However, most of the time the server will acknowledge, so your
    application can use this library to proceed under this assumption
    and only backtrack, if the server disagrees.

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: NOTICE README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/predictive.git

flag Devel
    default: False
    description: Development dependencies
    manual: True

flag Examples
    default: False
    description: Build the example programs
    manual: True


library
    build-depends:
        base                >= 4.8 && < 5,
        containers          >= 0.5 && < 1
    if flag(devel)
        build-depends: rapid
    default-language: Haskell2010
    ghc-options: -W -fdefer-typed-holes
    exposed-modules:
        Data.Predictive

test-suite tests
    type: exitcode-stdio-1.0
    build-depends:
        base                >= 4.8 && < 5,
        smallcheck,
        tasty,
        tasty-smallcheck,
        predictive
    default-language: Haskell2010
    ghc-options: -W -threaded -with-rtsopts=-N -fdefer-typed-holes
    hs-source-dirs: tests
    main-is: Props.hs
